fix z-index vignette spacing

--- a/src/styles/_press.scss
+++ b/src/styles/_press.scss
@@ -13,9 +13,16 @@
     display: flex;
     flex-direction: column;
 
-    &--vignette {
+    &--vignette::after {
       --shadow-color: theme('colors.gray.950 / 20%');
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       box-shadow: 0 0 4rem 0 var(--shadow-color) inset;
+      pointer-events: none;
     }
 
     &--background {
@@ -24,8 +31,6 @@
     }
 
     &__image-container {
-      z-index: -1;
-
       &--background {
         @apply overlay-after absolute inset-0 z-0 after:bg-gray-950/80;
       }
@@ -37,7 +42,6 @@
 
     &__content {
       @apply flex flex-col justify-center py-4;
-      z-index: -1; // under vignette
 
       &--overlay {
         @apply relative z-10 flex h-full flex-col justify-center px-8 py-6;
